# romea-ros1-mobile-base

romea_mobile_base_msgs/: CMakeLists.txt  package.xml
romea_mobile_base_utils/: CMakeLists.txt  package.xml
romea_mobile_base_utils/include/romea_mobile_base_utils/control/: command_interface.hpp  command_publisher.hpp  command_traits.hpp
romea_mobile_base_utils/include/romea_mobile_base_utils/conversions/: command_conversions.hpp  kinematic_conversions.hpp
romea_mobile_base_utils/include/romea_mobile_base_utils/params/: command_interface_parameters.hpp  command_limits_parameters.hpp  mobile_base_control_parameters.hpp  mobile_base_geometry_parameters.hpp  mobile_base_inertia_parameters.hpp  mobile_base_parameters.hpp  mobile_base_parameters1FAS2FWD.hpp  mobile_base_parameters1FAS2RWD.hpp  mobile_base_parameters2AS4WD.hpp  mobile_base_parameters2FWS2FWD.hpp  mobile_base_parameters2FWS2RWD.hpp  mobile_base_parameters2FWS4WD.hpp  mobile_base_parameters2TD.hpp  mobile_base_parameters2WD.hpp  mobile_base_parameters4WD.hpp  mobile_base_parameters4WS4WD.hpp
romea_mobile_base_utils/src/control/: command_interface.cpp
romea_mobile_base_utils/src/conversions/: command_conversions.cpp  kinematic_conversions.cpp
