<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>romea_mobile_base_utils</name>
  <version>0.0.0</version>
  <description>Package containing mobile base utilities</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>four_wheel_steering_msgs</depend>
  <depend>ackermann_msgs</depend>

  <depend>romea_core_common</depend>
  <depend>romea_core_mobile_base</depend>

  <depend>romea_common_utils</depend>
  <depend>romea_mobile_base_msgs</depend>
  <depend>romea_cmd_mux_msgs</depend>
  <!-- <depend>romea_cmd_mux_utils</depend> -->
</package>
